@@ -48,6 +48,9 @@ Changes from 0.7-0 to 0.8-0
 
     vignette("extensibility")
 
+14. Added 'interpolate' argument to grid.animate()
+    (only currently supports "linear" or "discrete").
+
 
 Changes from 0.6-0 to 0.7-0
 ===========================
